Fix footer on mobile

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,10 +2,41 @@
   background-color: #f9f9f9;
   font-size: $font-size-small;
   border-top: 1px solid #A0EA6E;
+  padding-top: 10px;
+  margin-bottom: 0;
+
+  @media (max-width: $screen-sm) {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.row-valign {
+  @extend .row;
+  @media (min-width: $screen-sm) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 #footer-info {
-  @extend .col-md-4, .text-center;
-  padding: 10px 0;
+  @extend .col-md-4, .col-md-pull-4, .col-xs-12, .text-center;
   line-height: $line-height-large*1.3;
+}
+
+#footer-faq {
+  @extend .col-md-4, .col-xs-6, .text-left;
+  line-height: $line-height-large*1.3;
+}
+
+#footer-imprint {
+  @extend .col-md-4, .col-md-push-4, .col-xs-6, .text-right;
+  line-height: $line-height-large*1.3;
+}
+
+#footer-faq,
+#footer-imprint {
+  @media (max-width: $screen-sm) {
+    margin-bottom: 10px;
+  }
 }
